# pypi-sphinx-flexlate-example

./: .buildinfo  .gitignore  .releaserc.yaml  CHANGELOG.md  Pipfile  README.md  conf.py  flexlate.json  genindex.html  global-requirements.in  global-requirements.txt  index.html  justfile  lint-requirements.in  lint-requirements.txt  mvenv.yaml  mypy.ini  noxfile.py  objects.inv  package.json  py-modindex.html  pyproject.toml  reqs_extension.py  reqs_path.py  search.html  searchindex.js  setup.cfg  setup.py  sg_execution_times.html  sitemap.xml  test-requirements.in  tutorial.html  version.py
.github/: IGNORE_THIS_FILE.txt
.venvs/docs/: pyproject.toml
.venvs/lint/: pyproject.toml
_sources/: index.md.txt  sg_execution_times.rst.txt  tutorial.rst.txt
_static/: documentation_options.js
api/: modules.html  pypi_sphinx_flexlate_example.html
auto_examples/: index.html  sg_execution_times.html  simple_example.html
binder/: requirements.txt
docsrc/: Makefile  autobuild.sh
nbexamples/: Simple Example.ipynb
pypi_sphinx_flexlate_example/: __init__.py
requirements/: global-requirements-3.10-darwin-Darwin-x86_64.txt  global-requirements-3.10-linux-Linux-x86_64.txt  global-requirements-3.10-linux_x86_64.txt  global-requirements-3.10-win32-Windows-AMD64.txt  global-requirements-3.10-win_amd64.txt  global-requirements-3.10.0-linux-Linux-x86_64.txt  global-requirements-3.10.0-win32-Windows-AMD64.txt  global-requirements-3.8-darwin-Darwin-x86_64.txt  global-requirements-3.8-linux-Linux-x86_64.txt  global-requirements-3.8-macosx_10_15_universal2.txt  (+22 more)
(+17 files in other folders)
