[tool.poetry]
name = "pypi-sphinx-flexlate-example-docs"
description = "Documentation building environment for pypi-sphinx-flexlate-example"
version = "1.0.0"
authors = ["Nick DeRobertis <derobertis.nick@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
pypi-sphinx-flexlate-example = {path = "../..", develop = true}
sphinx = "*"
sphinx-autobuild = "*"
sphinx-autodoc-typehints = "*"
sphinxcontrib-fulltoc = "*"
sphinx-paramlinks = "*"
sphinx-gallery = "*"
sphinx-copybutton = "*"
pypandoc = "*"
myst-parser = "*"
sphinx-material = "*"